[package]
name = "hamon"
version = "0.2.0"
authors = ["Tony Nguyen tonyng147@gmail.com"]
edition = "2021"
description = "A zero-cost, type-level static decorator and pipeline builder."
readme = "README.md"
repository = "https://github.com/TonyNg147"
license = "MIT"
keywords = ["performance", "decorator", "pipeline", "zero-cost", "static-dispatch"]
categories = ["development-tools", "rust-patterns", "data-structures"]

[dependencies]
# Keep empty if no external runtime dependencies are needed
hamon_derive = { version = "0.2.0", path = "./hamon_derive" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "vs_tradition"
harness = false